
origin/master

  [BUG FIXES]

  - Fix memory leak in cogd process
    Not properly freeing the facts hash.  While we freed the values
    *in* the hash, the hash itself was being leaked.  Also, fixed some
    incidental (but constant) leaks related to startup overhead.



3.0.15                                                     runtime 20150209

  [BUG FIXES]

  - Fix segfaults in sha1_*() argument ordering problems
    (libvigor-1.2.3+ fixed up the SHA1 calls to match convention)



3.0.14                                                     runtime 20150209

  [CLEANUP]

  - Move SHA1 implementation into libvigor 1.2.2+



3.0.13                                                     runtime 20150209

  [BUG FIXES]

  - Fix log level of res.group.absent "enforcing" message.

  - Fix debian/control dependencies on libvigor

  - Fix bug in authdb that was improperly setting /etc/* file modes
    If you were using Clockwork to manage users prior to 3.0.13, you'll
    definitely want to set up file resources to set the permissions back
    to more secure values (like 0600 for /etc/shadow and /etc/gshadow)

  - Fix pathing issue in time gatherer, to play nicely with mesh



3.0.12       2014-02-10                                    runtime 20150209

  [ENHANCEMENTS]

  - Multiline output of mesh commands is now supported.



3.0.11       2014-02-09                                    runtime 20150209

  [ENHANCEMENTS]

  - New Mesh commands for retrieving fact info

    `show facts` lets remote administrators retrieve full lists of all
    facts defined on hosts. Additionally `show fact <fact>` will target
    that list, and return only the specific fact value for the remote
    hosts.

  - New `system` opcode for executinging commands and redirecting all of
    standard output to the pendulum VMs configured stdout stream.  Standard
    error is ignored.



3.0.10       2014-02-04                                    runtime 20150202

  [ENHANCEMENTS]
